--- a/addeventdialog.ui
+++ b/addeventdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>374</width>
-    <height>281</height>
+    <width>394</width>
+    <height>315</height>
    </rect>
   </property>
   <property name="font">
@@ -26,8 +26,8 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>195</x>
-     <y>240</y>
+     <x>190</x>
+     <y>270</y>
      <width>168</width>
      <height>27</height>
     </rect>
@@ -55,10 +55,10 @@
   <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>22</x>
-     <y>24</y>
-     <width>341</width>
-     <height>211</height>
+     <x>20</x>
+     <y>25</y>
+     <width>369</width>
+     <height>231</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -124,14 +124,33 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="0">
+    <item row="4" column="0" colspan="2">
+     <widget class="QLabel" name="warning_lbl">
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+        <italic>true</italic>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLabel { color: red}</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>Примітка</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QTextEdit" name="comment_te"/>
     </item>
    </layout>
