--- a/res/res.qrc
+++ b/res/res.qrc
@@ -7,5 +7,9 @@
         <file>action_icons/add_event.png</file>
         <file>action_icons/default_user.png</file>
         <file>action_icons/add_patient_from_db.png</file>
+        <file>action_icons/all_events.png</file>
+        <file>action_icons/cancel_event.png</file>
+        <file>action_icons/edit_event.png</file>
+        <file>action_icons/appointment.png</file>
     </qresource>
 </RCC>
