start impl alleventsview

--- a/addeventdialog.ui
+++ b/addeventdialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>AddEventDialog</class>
  <widget class="QDialog" name="AddEventDialog">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -52,7 +55,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
