--- a/addpatientdialog.ui
+++ b/addpatientdialog.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>AddPatientDialog</class>
  <widget class="QDialog" name="AddPatientDialog">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
