--- a/addeventdialog.ui
+++ b/addeventdialog.ui
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>AddEventDialog</class>
  <widget class="QDialog" name="AddEventDialog">
@@ -26,10 +26,13 @@
    <iconset resource="res/res.qrc">
     <normaloff>:/action_icons/add_event.png</normaloff>:/action_icons/add_event.png</iconset>
   </property>
-  <widget class="QWidget" name="layoutWidget">
+  <property name="modal">
+   <bool>true</bool>
+  </property>
+  <widget class="QWidget" name="layoutWidget1">
    <property name="geometry">
     <rect>
-     <x>190</x>
+     <x>220</x>
      <y>270</y>
      <width>168</width>
      <height>27</height>
@@ -55,7 +58,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="layoutWidget2">
    <property name="geometry">
     <rect>
      <x>20</x>
