--- a/addpatientdialog.ui
+++ b/addpatientdialog.ui
@@ -22,6 +22,9 @@
   <property name="windowTitle">
    <string>Створити картку пацієнта</string>
   </property>
+  <property name="modal">
+   <bool>true</bool>
+  </property>
   <widget class="QWidget" name="layoutWidget1">
    <property name="geometry">
     <rect>
