--- a/alleventsdialog.ui
+++ b/alleventsdialog.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>568</width>
-    <height>411</height>
+    <width>817</width>
+    <height>421</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -48,7 +48,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QComboBox" name="search_cmb"/>
+      <widget class="QComboBox" name="search_cb"/>
      </item>
      <item>
       <widget class="QStackedWidget" name="stacked_wgt">
@@ -74,24 +74,27 @@
         <number>1</number>
        </property>
        <widget class="QWidget" name="s_date">
-        <widget class="QDateEdit" name="dateEdit">
+        <widget class="QDateEdit" name="search_de">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>81</width>
+           <width>91</width>
            <height>22</height>
           </rect>
+         </property>
+         <property name="calendarPopup">
+          <bool>true</bool>
          </property>
         </widget>
        </widget>
        <widget class="QWidget" name="s_text">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="search_le">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>141</width>
+           <width>201</width>
            <height>21</height>
           </rect>
          </property>
@@ -100,6 +103,43 @@
          </property>
          <property name="clearButtonEnabled">
           <bool>true</bool>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QWidget" name="s_combo">
+        <widget class="QComboBox" name="status_cb">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>0</y>
+           <width>131</width>
+           <height>22</height>
+          </rect>
+         </property>
+        </widget>
+       </widget>
+       <widget class="QWidget" name="s_time">
+        <widget class="QTimeEdit" name="search_te">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>61</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="displayFormat">
+          <string>hh:mm</string>
+         </property>
+         <property name="calendarPopup">
+          <bool>false</bool>
+         </property>
+         <property name="time">
+          <time>
+           <hour>12</hour>
+           <minute>0</minute>
+           <second>0</second>
+          </time>
          </property>
         </widget>
        </widget>
