--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -188,13 +188,13 @@
              <widget class="QLineEdit" name="surname_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -219,13 +219,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="name_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -250,13 +250,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="f_name_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -281,13 +281,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="b_date_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -312,13 +312,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="sex_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -343,13 +343,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="city_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -374,13 +374,13 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLineEdit" name="tel_number_le">
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -411,13 +411,13 @@ background-color: rgba(250,250,250,0.2);
               </property>
               <property name="font">
                <font>
-                <family>Comic Sans MS</family>
-                <pointsize>9</pointsize>
+                <italic>true</italic>
                </font>
               </property>
               <property name="styleSheet">
                <string notr="true">QLineEdit {
 background-color: rgba(250,250,250,0.2);
+font-style: italic;
 }</string>
               </property>
               <property name="readOnly">
@@ -429,6 +429,19 @@ background-color: rgba(250,250,250,0.2);
              <widget class="QLabel" name="label_7">
               <property name="text">
                <string>Алергічні та хронічні захворювання</string>
+              </property>
+             </widget>
+            </item>
+            <item row="10" column="1">
+             <widget class="QLineEdit" name="illnesses_le">
+              <property name="styleSheet">
+               <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2);
+font-style: italic;
+}</string>
+              </property>
+              <property name="readOnly">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
@@ -444,18 +457,6 @@ background-color: rgba(250,250,250,0.2);
                </size>
               </property>
              </spacer>
-            </item>
-            <item row="10" column="1">
-             <widget class="QLineEdit" name="illnesses_le">
-              <property name="styleSheet">
-               <string notr="true">QLineEdit {
-background-color: rgba(250,250,250,0.2);
-}</string>
-              </property>
-              <property name="readOnly">
-               <bool>true</bool>
-              </property>
-             </widget>
             </item>
            </layout>
           </item>
