--- a/appointmentdialog.ui
+++ b/appointmentdialog.ui
@@ -25,7 +25,7 @@
   <property name="modal">
    <bool>true</bool>
   </property>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -44,6 +44,15 @@
     </item>
     <item row="0" column="1">
      <widget class="QLineEdit" name="patient_le">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit {
+background-color: rgba(250,250,250,0.2);
+font-style: italic;
+}</string>
+      </property>
       <property name="readOnly">
        <bool>true</bool>
       </property>
@@ -81,7 +90,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>330</x>
@@ -93,6 +102,9 @@
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QPushButton" name="ok_pb">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
       <property name="text">
        <string>ОК</string>
       </property>
