--- a/bindeventdialog.ui
+++ b/bindeventdialog.ui
@@ -112,6 +112,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="ok_pb">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string>ОК</string>
        </property>
