--- a/res/res.qrc
+++ b/res/res.qrc
@@ -13,5 +13,6 @@
         <file>action_icons/appointment.png</file>
         <file>action_icons/bind_event.png</file>
         <file>action_icons/default_user_female.png</file>
+        <file>action_icons/report.png</file>
     </qresource>
 </RCC>
