--- a/addeventdialog.ui
+++ b/addeventdialog.ui
@@ -9,9 +9,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>315</height>
+    <width>400</width>
+    <height>310</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>400</width>
+    <height>310</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>400</width>
+    <height>310</height>
+   </size>
   </property>
   <property name="font">
    <font>
